--- a/docker/frontend/game/socket_1v1/game.css
+++ b/docker/frontend/game/socket_1v1/game.css
@@ -1,16 +1,19 @@
 body {
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background: #000;
-    color: #fff;
-    font-family: Arial, sans-serif;
-  }
-  
-  canvas {
-    display: block;
-    border: 2px solid white;
-  }
-  
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: #000;
+  color: #fff;
+  font-family: Arial, sans-serif;
+}
+
+canvas {
+  display: block;
+  border: 2px solid white;
+}
+
+#main-menu {
+  text-align: center;
+}
